# agents

./: .env.mcphub.example  .gitignore  .ignore  .pre-commit-config.yaml  2026-03-02-054649-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COPILOT.md  GEMINI.md  Makefile  README.md  SECURITY.md  START-HERE.md  agent-bundle.json  apm.lock.yaml  apm.yml  mcp.json  opencode-integration-plan-extended.md  opencode-integration-plan.md  opencode.json  pyproject.toml  session-ses_2324.md  session-ses_232b.md
.claude/: apm-hooks.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor/: BUGBOT.md  cli.json  hooks.json  mcp.json  permissions.json
.gemini/: settings.json
.github/: copilot-instructions.md  dependabot.yml
.grok/: config.toml
.ocx/: receipt.jsonc
.opencode/: PLUGINS.md  package.json
.opencode-plugin/: plugin.json
agents/: README.md  code-reviewer.md  docs-writer.md  orchestrator.md  performance-profiler.md  planner.md  release-manager.md  researcher.md  security-auditor.md
agents-overhaul-planning/: README.md
config/: codex-config.toml  config-transaction-registry.json  cursor-agents.json  docs-artifact-registry.json  external-skills.md  grok-config.toml  grok-env.sh  grok-lsp.json  grok-plannotator-hooks.json  harness-surface-registry.json  hook-registry.json  hook-surface-registry.json  mcp-registry.json  opencode-dcp.jsonc  opencode-ensemble.json  opencode-large-image-optimizer.json  opencode-notifier.json  opencode-octto.json  opencode-quota-toast.json  opencode-token-monitor.json  opencode-tui-plugins.json  plugin-extension-registry.json  skill-registry-policy.json  support-tier-registry.json  sync-manifest.json  tooling-policy.json
docs/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
hooks/: auto-format.sh  guard-destructive.sh  lint-check.sh  log-prompt.sh  notify.sh  protect-files.sh  session-start.sh  task-completed-gate.sh  teammate-idle-gate.sh  verify-before-stop.sh  wagents-hook.py
instructions/: claude-code-global.md  codex-global.md  copilot-global.md  external-skills.md  gemini-cli-global.md  global.md  grok-global.md  opencode-agents-overlay.md  opencode-global.md
mcp/: .gitignore  README.md
mcp/mcphub/: README.md  fastmcp.json  mcp_settings.json  pyproject.toml  server.py
nerdbot_overhaul_plan_md_bundle/: 00_README.md  01_ULTIMATE_NERDBOT_OVERHAUL_PLAN.md  02_PARALLEL_SUBAGENT_TASK_GRAPH.md  03_CODEX_PROMPT.md  04_SUPPORTING_DOCS_AND_EVALS_PLAN.md
opencode-setup/: INSTALL_MANIFEST.md
openspec/: config.yaml
planning/: README.md
scripts/: check_agent_stack.py  check_discovery_parity.py  check_hook_discovery_parity.py  compose_shard_manifest.py  curated_catalog_enrichment_wave.py  docs-verbosity-baseline.sh  emit_external_skills_projection.py  harness_skill_cleanup_wave.py  migrate_external_skills_to_authoring_mdx.py  sync_agent_stack.py  validate_codex_config.py
skills/mcp-creator/templates/: fastmcp.json  pyproject.toml  server.py
skills/nerdbot/: AGENTS.md  README.md  SKILL.md  pyproject.toml
skills/nerdbot/assets/: activity-log-template.md  comparison-page-template.md  concept-page-template.md  entity-page-template.md  kb-bootstrap-template.md  overview-page-template.md  source-summary-template.md
skills/nerdbot/evals/: adversarial-kb-content-query.json  audit-mode.json  derive-generated-artifacts.json  derive-mode.json  empty-args-headless.json  enrich-mode.json  evals.json  explicit-invocation.json  generic-notes-negative-control.json  implicit-trigger.json  improve-mode.json  ingest-mode.json  large-source-stub-ingest.json  local-ingest-source-map.json  migrate-approval-token.json  migrate-safety.json  missing-reference-fallback.json  negative-control.json  no-confirmation-plan-only.json  obsidian-create-mode.json  obsidian-overhaul-first.json  obsidian-workspace-negative-control.json  query-mode.json  retrieval-provenance-query.json  semantic-extra-missing.json  watch-replay-safety.json
skills/nerdbot/references/: audit-checklist.md  cli.md  current-state-and-compatibility.md  graph.md  implementation-charter.md  ingestion-adapters.md  kb-architecture.md  kb-operations.md  migration-playbooks.md  obsidian-vaults.md  oss-dependencies.md  page-templates.md  pipeline-contracts.md  recovery-replay.md  retrieval.md  schema-contracts.md  setup.md  source-acquisition.md  watch-mode.md
skills/nerdbot/scripts/: check.py  kb_bootstrap.py  kb_inventory.py  kb_lint.py  kb_path_policy.py
skills/nerdbot/src/nerdbot/: __init__.py  cli.py  contracts.py  evidence.py  graph.py  legacy.py  operations.py  replay.py  research.py  retrieval.py  safety.py  sources.py  watch.py  workflows.py
tests/: conftest.py  skill_hub_slugs.py  test_apm_materialize.py  test_asset_toolkit_output.py  test_authoring_sync.py  test_catalog.py  test_catalog_audit.py  test_catalog_index_parity.py  test_catalog_rows.py  test_cli_integration.py  test_copilot_agents.py  test_curated_enrichment_wave.py  test_design_scan.py  test_discover_journal_store.py  test_discovery_classify_intent.py  test_discovery_coordinator.py  test_discovery_gap_engine.py  test_discovery_merge_artifacts.py  test_discovery_parity_check.py  test_discovery_schemas.py  test_distribution_metadata.py  test_docling_graph_skill.py  test_docs.py  test_docs_compose.py  test_docs_footer.py  test_docs_link_hygiene.py  test_docs_lint.py  test_docs_mcp_stubs.py  test_docs_mdx_safety.py  test_docs_redirects.py  test_docs_score.py  test_eval_adequacy.py  test_eval_cli.py  test_external_skills.py  test_frontend_designer_scan.py  test_github_workflows.py  test_grok_delegate_preflight.py  test_grok_delegate_skill.py  test_grok_doctor_json.py  test_grok_platform.py  (+53 more)
wagents/: __init__.py  apm.py  authoring_sync.py  catalog.py  catalog_audit.py  catalog_rows.py  cli.py  context.py  docs.py  docs_compose.py  docs_compose_apply.py  docs_compose_batch.py  docs_compose_regen_configs.py  docs_compose_upgrade.py  docs_compose_upgrade_agents.py  (+27 more)
(+4159 files in other folders)
