[project]
name = "wagents"
version = "0.1.0"
description = "CLI for managing centralized AI agent assets"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Wyatt Walsh", email = "wyattowalsh@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "typer>=0.15",
    "pyyaml>=6",
    "uvicorn>=0.41.0",
    "loguru>=0.7.3",
    "rich>=14.3.2",
    "httpx>=0.28.1",
]

[project.scripts]
wagents = "wagents.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jsonschema>=4.25.1",
    "playwright>=1.58.0",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.9",
    # Canonical Ty version pin for repo workflows, hooks, and docs.
    "ty==0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# Keep Ty explicitly declared for config discovery, scoped checks, and tooling detection.
[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["wagents", "scripts"]

[tool.ty.terminal]
error-on-warning = true

[tool.uv.workspace]
members = ["mcp/*"]
