[project]
name = "mcp-mcphub"
version = "0.1.0"
description = "MCPHub control-plane metadata MCP server"
requires-python = ">=3.13"
dependencies = ["fastmcp>=2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
