[project]
name = "mcp-service-name"
version = "0.1.0"
description = "MCP server for service-name"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0rc2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
